data/all_generated_tests/raw_wast_tests/nop_IncorrectBranchTargetResolution_6.wast
;; 7. **Test Description: `br` and Function Call with `nop`**    - **Scenario**: Combine `br` instructions with function calls within the same block, including `nop` instructions.    - **Constraint**: Ensures `nop` does not interfere with branch targets and function calls within the same execution context.    - **Context**: Incorrectly resolved branches can cause jumps over function calls or unintended code execution.

(assert_invalid
  (module
    (func $br_func (block (nop) (br 0) (call $my_func) (nop)))
    (func $my_func)
  )
  "invalid jump target"
)